php_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalable-app
  labels:
    tier: backend
spec:
  selector:
    app: scalable-app
    tier: backend
  ports:
    - protocol: TCP
      port: 9000
