ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scalable-app
    # annotations:
    #   ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
    - http:
        paths: 
          - path: /
            backend:
              serviceName: scalable-app
              servicePort: 80
